--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
       padding-right: 10px;
     }
     .x-axis-labels3 {
-      left: 70px;
-    background-color: red;
+      left: 80px;
+    /* background-color: red; */
       justify-content: space-around;
-    width: calc(100% - 24%);
+    width: calc(100% - 18%);
     font-size: 0.6rem;
     }
     .grid-line-3m3 {
