--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     }
     .grid-line3 {
     position: absolute !important;
-    left: 180px;
+    left: 14%;
     background-color: red;
     width: calc(5% - 80px); /* Match chart container width */
     height: 0.5px;
@@ -234,15 +234,7 @@
       padding-bottom: 0px;
       background-color:#1d1d25; /* Static semi-transparent background */
     }
-    .grid-line3 {
-    position: absolute !important;
-    left: 80px;
-    width: calc(95% - 44px) !important; /* Match chart container width */
-    height: 0.5px;
-    background-color: #afafaf3b; /* Line color */
-    /* position: relative !important; */
-    z-index: 0 !important;
-  }
+    
   
     
     .grid-line-3m3 {
