--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
     }
     .grid-line3 {
     position: absolute !important;
-    left: 14%;
+    left: 14% !important;
     background-color: red;
-    width: calc(5% - 80px); /* Match chart container width */
+    width: calc(95% - 80px) !important; /* Match chart container width */
     height: 0.5px;
     background-color: #afafaf3b; /* Line color */
     /* position: relative !important; */
