--- a/index.html
+++ b/index.html
@@ -212,9 +212,16 @@
     font-size: 0.5rem;
     color: rgba(255, 255, 255, 0.863);
 }
-    .font-mobile3{
-    font-size:xx-small;
-  }
+.bars3 {
+    display: flex
+;
+    justify-content: space-around;
+    align-items: flex-end;
+    width: calc(100% - 3%) !important;
+    height: 100%;
+    padding-left: 8%;
+    padding-right: 1%;
+}
   }
   @media screen and (max-width: 767px){ /* Tablet view */
       .bar3 .corner3 {
@@ -248,9 +255,7 @@
   .grid-line-1m3 {
     bottom: 40px; /* 26.67% height for $1 Million */
   }
-  .font-mobile3{
-    font-size: x-small;
-  }
+  
   }
 
     @keyframes border-move  {
