--- a/index.html
+++ b/index.html
@@ -202,15 +202,13 @@
       background-color:#1d1d25; /* Static semi-transparent background */
     }
     .x-axis-labels3 {
-    position: absolute;
-    bottom: 1px;
-    left: 99px;
-    display: flex
-;
-    justify-content: space-around;
-    width: calc(100% - 24%);
-    font-size: 0.5rem;
-    color: rgba(255, 255, 255, 0.863);
+      position: absolute;
+        bottom: 1px;
+        left: 15%;
+        display: flex;
+        justify-content: space-around;
+        width: calc(100% - 16%);
+        font-size: 0.5rem;
 }
 .bars3 {
     display: flex
